# web-ui/src/app/state/ssh-key/ssh-key.models.ts
@@ -1,7 +1,6 @@
 export interface SshKey {
-  sshKey: string;
+  publicKey: string;
   createdAt: Date;
   description: string;
-  expiresAt: Date;
   id: string;
 }
