# webserver/src/main/java/com/mlaide/webserver/service/UserService.java
@@ -1,5 +1,7 @@
 package com.mlaide.webserver.service;
 
+import com.mlaide.webserver.model.ItemList;
+import com.mlaide.webserver.model.SshKey;
 import com.mlaide.webserver.repository.entity.UserRef;
 import com.mlaide.webserver.model.User;
 
@@ -13,4 +15,10 @@ public interface UserService {
     void updateCurrentUser(User user);
 
     User getUserByEmail(String email);
+
+    ItemList<SshKey> getSshKeysForCurrentUser();
+
+    SshKey createSshKeyForCurrentPrincipal(SshKey sshKey);
+
+    void deleteSshKey(String sshKeyId);
 }
