# webserver/src/main/java/com/mlaide/webserver/service/impl/UserServiceImpl.java
@@ -1,13 +1,22 @@
 package com.mlaide.webserver.service.impl;
 
+import com.jcraft.jsch.JSch;
+import com.jcraft.jsch.JSchException;
+import com.jcraft.jsch.KeyPair;
+import com.mlaide.webserver.model.ItemList;
+import com.mlaide.webserver.model.SshKey;
+import com.mlaide.webserver.model.User;
+import com.mlaide.webserver.repository.SshKeysRepository;
 import com.mlaide.webserver.repository.UserRepository;
+import com.mlaide.webserver.repository.entity.SshKeyEntity;
 import com.mlaide.webserver.repository.entity.UserEntity;
 import com.mlaide.webserver.repository.entity.UserRef;
-import com.mlaide.webserver.service.mapper.UserMapper;
-import com.mlaide.webserver.model.User;
 import com.mlaide.webserver.service.NotFoundException;
 import com.mlaide.webserver.service.UserResolver;
 import com.mlaide.webserver.service.UserService;
+import com.mlaide.webserver.service.mapper.SshKeyMapper;
+import com.mlaide.webserver.service.mapper.UserMapper;
+import org.bson.types.ObjectId;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,6 +25,10 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.io.ByteArrayOutputStream;
+import java.time.Clock;
+import java.time.OffsetDateTime;
+import java.util.List;
 import java.util.Optional;
 
 @Service
@@ -24,14 +37,23 @@ public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final UserMapper userMapper;
     private final UserResolver userResolver;
+    private final SshKeysRepository sshKeyRepository;
+    private final SshKeyMapper sshKeyMapper;
+    private final Clock clock;
 
     @Autowired
     public UserServiceImpl(UserRepository userRepository,
                            UserMapper userMapper,
-                           UserResolver userResolver) {
+                           UserResolver userResolver,
+                           SshKeysRepository sshKeyRepository,
+                           SshKeyMapper sshKeyMapper,
+                           Clock clock) {
         this.userRepository = userRepository;
         this.userMapper = userMapper;
         this.userResolver = userResolver;
+        this.sshKeyRepository = sshKeyRepository;
+        this.sshKeyMapper = sshKeyMapper;
+        this.clock = clock;
     }
 
     @Override
@@ -87,6 +109,62 @@ public class UserServiceImpl implements UserService {
         }
 
         return userMapper.fromEntity(userEntity.get());
+    }
+
+    @Override
+    public ItemList<SshKey> getSshKeysForCurrentUser() {
+        List<SshKeyEntity> sshKeyEntities = sshKeyRepository.findByUserId(getCurrentUserId());
+
+        List<SshKey> sshKeys = sshKeyMapper.fromEntity(sshKeyEntities);
+
+        return new ItemList<>(sshKeys);
+    }
+
+    @Override
+    public SshKey createSshKeyForCurrentPrincipal(SshKey sshKey) {
+        String userId = getCurrentUserId();
+
+        logger.info("Creating new SSH key for user {}", userId);
+
+        ByteArrayOutputStream privateKey = new ByteArrayOutputStream();
+        ByteArrayOutputStream publicKey = new ByteArrayOutputStream();
+
+        try {
+            JSch jsch = new JSch();
+
+            KeyPair keyPair = KeyPair.genKeyPair(jsch, KeyPair.RSA);
+            keyPair.writePrivateKey(privateKey);
+            keyPair.writePublicKey(publicKey, sshKey.getDescription());
+
+            keyPair.dispose();
+        } catch (JSchException e) {
+            logger.error("Could not create SSH key", e);
+            // TODO: Log that key generation failed and rethrow
+        }
+
+        SshKeyEntity sshKeyEntity = new SshKeyEntity();
+        sshKeyEntity.setPrivateKey(privateKey.toByteArray());
+        sshKeyEntity.setPublicKey(publicKey.toByteArray());
+        sshKeyEntity.setCreatedAt(OffsetDateTime.now(clock));
+        sshKeyEntity.setUserId(userId);
+        sshKeyEntity.setDescription(sshKey.getDescription());
+
+        SshKeyEntity savedSshKey = sshKeyRepository.insert(sshKeyEntity);
+
+        return sshKeyMapper.fromEntity(savedSshKey);
+    }
+
+    @Override
+    public void deleteSshKey(String sshKeyId) {
+        ObjectId objectId = new ObjectId(sshKeyId);
+        Optional<SshKeyEntity> sshKeyEntity = sshKeyRepository.findById(objectId);
+        String userId = getCurrentUserId();
+
+        if (sshKeyEntity.isEmpty() || !sshKeyEntity.get().getUserId().equalsIgnoreCase(userId)) {
+            throw new NotFoundException();
+        }
+
+        sshKeyRepository.deleteById(objectId);
     }
 
     private User tryResolveUser(String userId) {
